refactored the port constraints mechanism in the hierarchical layout algorithm